--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <button id="custom-alert-close">OK</button>
         </div>
     </div>
-
+    <div id="nope-prompt"></div>
 </div>
 </body>
 </html>
